Prevent overlap of language link and title, move main page style to a different file

--- a/static/style.css
+++ b/static/style.css
@@ -168,11 +168,6 @@ img:hover:not(.nohover) {
     text-decoration: none;
 }
 
-.lang {
-    float: left;
-    position: absolute;
-}
-
 .cv img {
     vertical-align: baseline;
 }
